[package]
name = "TP_Web_Request"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
trust-dns-resolver = "0.22"
tokio-rustls = "0.23"
webpki-roots = "0.22"
x509-parser = "0.15"
hex = "0.4"
regex = "1.10"
scraper = "0.14"

